2004-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Add DESTDIR support.

2003-12-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (DrawMenuEntryLabel): Fix
	missing variable error created by the last
	checkin on 2003-12-27.

2003-12-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (ReconfigureWindowsMenu,
	TkWinHandleMenuEvent, DrawMenuEntryArrow):
	Fix drawing of a disabled cascade menu
	arrow. Tk was displaying a disabled cascade
	menu arrow in black instead of gray. This
	was caused by a bug in the Win32 code for
	user drawn menu items. The fix is to avoid
	telling Windows that the menu item is a
	cascade type and then draw the gray arrow
	bitmap on our own.
	[Tk Patch 865842]

2003-12-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (DrawMenuEntryAccelerator,
	DrawMenuEntryLabel): When drawing the label
	text and accelerator text for a disabled
	menu entry be sure to draw a 3D highlight.
	The only exception to this is when a
	disabled menu entry is highlighted, in that
	case do not draw a 3D hightlight.

2003-12-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (DrawMenuEntryAccelerator,
	DrawMenuEntryArrow): Move the unused menu
	arrow drawing code in DrawMenuEntryAccelerator
	into a new function named DrawMenuEntryArrow.
	This makes no functional change but it will
	make it easier to fix things in the future.

2003-12-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (DrawWindowsSystemBitmap):
	Fix a strange Win32 bug where the logical
	coordinates returned by a call to DPtoLP
	are wrong the first time a menu is posted.
	This bug manifested itself by drawing the
	bitmap in the wrong place in a menu.
	The fix was to pass the newly created DC
	instead of the DC from the window.
	[SN Bug 814335]

2003-12-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (TkWinHandleMenuEvent,
	RecursivelyClearActiveMenu, TkpSetWindowMenuBar,